--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -134,7 +134,7 @@ a {
 	font-size: 0.875rem;
 	padding: 11px 12px 12px 14px;
 	color: #878786;
-	background-image: url("images/Visa.png");
+	background-image: url("../assets/images/Visa.png");
 	background-repeat: no-repeat;
 	background-size: 38px 12px;
 	background-position: right;
@@ -243,7 +243,7 @@ input[type=radio]:checked + .label-radio:before {
 
 input[type=checkbox]:checked + .new-label-checkbox:before {
     content: "";
-	background-image: url("icons/check-mark.svg");
+	background-image: url("../assets/icons/check-mark.svg");
 	background-repeat: no-repeat;
 	background-position: center;
     font-size: 20px;
@@ -284,7 +284,7 @@ input[type=checkbox]:checked + .new-label-checkbox:before {
 
 input[type=checkbox]:checked + .label-checkbox:before {
     content: "";
-	background-image: url("icons/check-mark.svg");
+	background-image: url("../assets/icons/check-mark.svg");
 	background-repeat: no-repeat;
 	background-position: center;
     font-size: 20px;
@@ -472,7 +472,7 @@ input[type=checkbox]:checked + .label-checkbox:before {
 }
 
 .l-nav__o-title:hover {
-	opacity: 0.3;
+	opacity: 1;
 	cursor: pointer;
 	color: black;
 }
@@ -625,7 +625,7 @@ input[type=checkbox]:checked + .label-checkbox:before {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: 7.2px 11.6px;
-	background-image: url("images/facebook@3x.png");
+	background-image: url("../assets/images/facebook@3x.png");
 	border-radius: 9px;
 }
 
@@ -638,7 +638,7 @@ input[type=checkbox]:checked + .label-checkbox:before {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: 10.8px 12.8px;
-	background-image: url("images/pinterest@3x.png");
+	background-image: url("../assets/images/pinterest@3x.png");
 	border-radius: 9px;
 }
 
@@ -651,7 +651,7 @@ input[type=checkbox]:checked + .label-checkbox:before {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: 13.2px 9.3px;
-	background-image: url("images/twitter@3x.png");
+	background-image: url("../assets/images/twitter@3x.png");
 	border-radius: 9px;
 }
 
@@ -665,7 +665,7 @@ input[type=checkbox]:checked + .label-checkbox:before {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: 10.8px 10.5px;
-	background-image: url("images/instagram@3x.png");
+	background-image: url("../assets/images/instagram@3x.png");
 	border-radius: 9px;
 }
 .o-footer-line-container {
@@ -722,7 +722,7 @@ input[type=checkbox]:checked + .label-checkbox:before {
 	width: 68.1px;
 	height: 50px;
 	border-radius: 5px;
-	background-image: url("images/first@3x.jpg");
+	background-image: url("../assets/images/first@3x.jpg");
 	background-size: 43px 40px;
 	background-repeat: no-repeat;
 	background-position: center; 
@@ -856,7 +856,7 @@ input[type=checkbox]:checked + .label-checkbox:before {
 	height: 100px;
 	width: 136px;
 	border-radius: 5px;
-	background-image: url("images/first@3x.jpg");
+	background-image: url("../assets/images/first@3x.jpg");
 	background-size: 86px 80px;
 	background-repeat: no-repeat;
 	background-position: center; 
@@ -1130,15 +1130,43 @@ input[type=checkbox]:checked + .label-checkbox:before {
 }
 
 .c-menu-dialog {
+	animation-name: movingBox;
+	animation-duration: 200ms;
+	animation-iteration-count: 1;
+	animation-timing-function: linear;
 	display: block;
 	width: 620px;
 	height: auto;
 	box-shadow: 0.7px 10px 20px 0 rgba(9, 9, 9, 0.2);
 	background-color: #ffffff;
 	position: absolute;
-	top: 145px;
-	left: 54px;
+	top: 45px;
+	left: 0px;
 	z-index: 10;
+}
+  
+
+@keyframes movingBox {
+  0% {
+    opacity: 0.2;
+	transform: translateY(-20px);
+  }
+  25% {
+    opacity: 0.4;
+	transform: translateY(-15px);
+  }
+  50% {
+    opacity: 0.6;
+	transform: translateY(-10px);
+  }
+  75% {
+	  opacity: 0.8;
+	  transform: translateY(-5px);
+  }
+  100% {
+    opacity: 1.0;
+	transform: translateY(0px);
+  }
 }
 
 .c-menu-dialog__o-title1 {
@@ -1277,7 +1305,7 @@ input[type=checkbox]:checked + .label-checkbox:before {
 	height: 42px;
 	border-radius: 21px;
 	background-color: #3b5998;
-	background-image: url("images/login/facebook.svg");
+	background-image: url("../assets/images/login/facebook.svg");
 	background-size: 16px 24px;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -1289,7 +1317,7 @@ input[type=checkbox]:checked + .label-checkbox:before {
 	height: 42px;
 	border-radius: 21px;
 	background-color: #dc4e41;
-	background-image: url("images/login/google.svg");
+	background-image: url("../assets/images/login/google.svg");
 	background-size: 29px 23px;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -1301,7 +1329,7 @@ input[type=checkbox]:checked + .label-checkbox:before {
 	height: 42px;
 	border-radius: 21px;
 	background-color: #cb2027;
-	background-image: url("images/login/pinterest.svg");
+	background-image: url("../assets/images/login/pinterest.svg");
 	background-size: 24px 29px;
 	background-repeat: no-repeat;
 	background-position: center;
