--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -339,6 +339,11 @@ input[type=checkbox]:checked + .label-checkbox:before {
 
 /* ---------------------------------------------------Header ---------------------------------------------------*/
 
+.l-header-main-image:hover {
+	cursor: pointer;
+	opacity: 0.7;
+}
+
 .l-header__circle {
 	display: flex;
 	align-items: center;
@@ -346,6 +351,22 @@ input[type=checkbox]:checked + .label-checkbox:before {
 	font-family: 'Open Sans', sans-serif;
 	position: absolute;
 	right: -12.5px;
+	top: -12.5px;
+	width: 25px;
+	height: 25px;
+	background-color: #8bc34a;
+	border-radius: 12.5px;
+	font-size: 0.625rem;
+	color: #ffffff;
+}
+
+.l-header__circle-2 {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-family: 'Open Sans', sans-serif;
+	position: absolute;
+	right: 90px;
 	top: -12.5px;
 	width: 25px;
 	height: 25px;
@@ -422,7 +443,6 @@ input[type=checkbox]:checked + .label-checkbox:before {
 .l-header__o-icon-1 {
 	width: 28px;
 	height: 26px;
-	margin-right: 28px;
 }
 
 .l-header__o-icon-1:hover {
@@ -430,7 +450,20 @@ input[type=checkbox]:checked + .label-checkbox:before {
 	cursor: pointer;
 }
 
+.l-header_o-total-price-article {
+	display: block;
+	height: auto;
+	width: auto;
+	margin-right: 10px;
+	margin-left: 10px;
+	text-align: center;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 1rem;
+	color: #8bc34a;
+}
+
 .l-header__o-icon-2 {
+	position: relative;
 	width: 32px;
 	height: 27px;
 	margin-right: 28px;
@@ -479,6 +512,10 @@ input[type=checkbox]:checked + .label-checkbox:before {
 
 /* ---------------------------------------------------Main Content--------------------------------------------------- */
 .l-main {
+	animation-name: movingBox;
+	animation-duration: 200ms;
+	animation-iteration-count: 1;
+	animation-timing-function: linear;
 	display: block;
 	width: 100%;
 	min-width: 1440px;
@@ -708,6 +745,10 @@ input[type=checkbox]:checked + .label-checkbox:before {
 .l-maincontent__c-table-row {
 	display: table-row;
 	margin-bottom: 20px;
+	animation-name: movingBox;
+	animation-duration: 400ms;
+	animation-iteration-count: 1;
+	animation-timing-function: linear;
 }
 
 .l-maincontent__c-table-cell {
@@ -723,7 +764,7 @@ input[type=checkbox]:checked + .label-checkbox:before {
 	height: 50px;
 	border-radius: 5px;
 	background-image: url("../assets/images/first@3x.jpg");
-	background-size: 43px 40px;
+	background-size: 68.1px 50px;
 	background-repeat: no-repeat;
 	background-position: center; 
 	border: solid 1px #c6c6c5;
@@ -731,9 +772,9 @@ input[type=checkbox]:checked + .label-checkbox:before {
 }
 
 .table-cell-2 {
-	width: 30%;
+	width: 200px;
 	height: 18px;
-	padding-left: 0;
+	padding-left: 25px;
 	font-size: 0.875rem;
 	font-weight: 200;
 	letter-spacing: 0.28px;
@@ -754,7 +795,7 @@ input[type=checkbox]:checked + .label-checkbox:before {
 }
 
 .table-cell-4 {	
-	width: 30%;
+	width: 100px;
 	height: 18px;
 	font-size: 0.875rem;
 	font-weight: 500;
@@ -895,7 +936,7 @@ input[type=checkbox]:checked + .label-checkbox:before {
 
 .table-cell-3-korzina {
 	display: inline-block;
-	margin-left: 170px;
+	margin-left: 140px;
 	width: 30px;
 	height: 30px;
 	border: solid 1px #c8c8c8;
@@ -903,9 +944,26 @@ input[type=checkbox]:checked + .label-checkbox:before {
 	background-color: rgba(0, 0, 0, 0);
 }
 
+.table-cell-3-korzina:hover {
+	opacity: 0.6;
+	cursor: pointer;
+}
+
 .table-cell-4-korzina {	
 	margin-left: 50px;
 	display: inline;
+	font-size: 0.875rem;
+	font-weight: 500;
+	line-height: 1.29;
+	letter-spacing: normal;
+	text-align: right;
+	color: #878786;
+}
+
+.table-cell-4-korzina-price {
+	margin-left: 50px;
+	width: 60px;
+	display: inline-block;
 	font-size: 0.875rem;
 	font-weight: 500;
 	line-height: 1.29;
@@ -971,7 +1029,7 @@ input[type=checkbox]:checked + .label-checkbox:before {
 
 .l-maincontent-korzina-article2 {
 	position: absolute;
-	left: 500px;
+	left: 530px;
 	font-size: 1.25rem;
 	font-weight: 400;
 	font-weight: normal;
@@ -1480,3 +1538,30 @@ input[type=checkbox]:checked + .label-checkbox:before {
 	text-align: right;
 	color: #878786;
 }
+
+.loader {
+	border: 8px solid #f3f3f3; /* Light grey */
+	border-top: 8px solid #8bc34a; /* Blue */
+	border-radius: 50%;
+	width: 120px;
+	height: 120px;
+	animation: spin 0.8s linear infinite;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	left: 50%;
+	transform: translateX(-50%);
+	margin: -60px;
+  }
+  
+  @keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+  }
+
+  .loader-wrapper{
+	display: block;
+	position: relative;
+	width: 100%;
+	height: 30rem;
+  }
