--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1539,29 +1539,72 @@ input[type=checkbox]:checked + .label-checkbox:before {
 	color: #878786;
 }
 
-.loader {
-	border: 8px solid #f3f3f3; /* Light grey */
-	border-top: 8px solid #8bc34a; /* Blue */
-	border-radius: 50%;
-	width: 120px;
-	height: 120px;
-	animation: spin 0.8s linear infinite;
-	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
-	left: 50%;
-	transform: translateX(-50%);
-	margin: -60px;
-  }
-  
-  @keyframes spin {
-	0% { transform: rotate(0deg); }
-	100% { transform: rotate(360deg); }
-  }
-
-  .loader-wrapper{
-	display: block;
-	position: relative;
+.cssload-loader-inner {
+	vertical-align: top;
+	display: inline-block;
 	width: 100%;
-	height: 30rem;
-  }
+	background-color: rgb(139, 195, 74);
+	animation: cssload-loader-inner 1.3s infinite ease-in;
+		-o-animation: cssload-loader-inner 1.3s infinite ease-in;
+		-ms-animation: cssload-loader-inner 1.3s infinite ease-in;
+		-webkit-animation: cssload-loader-inner 1.3s infinite ease-in;
+		-moz-animation: cssload-loader-inner 1.3s infinite ease-in;
+}
+
+.cssload-loader-block {
+	display: block;
+	margin: 200px auto 300px auto;
+	width: 78px;
+	height: 78px;
+	position: relative;
+	border: 4px solid rgb(139, 195, 74);
+	animation: cssload-loader 1.3s infinite ease;
+		-o-animation: cssload-loader 1.3s infinite ease;
+		-ms-animation: cssload-loader 1.3s infinite ease;
+		-webkit-animation: cssload-loader 1.3s infinite ease;
+		-moz-animation: cssload-loader 1.3s infinite ease;
+}
+
+@keyframes cssload-loader {
+	0% {
+		transform: rotate(0deg);
+	}
+	
+	25% {
+		transform: rotate(180deg);
+	}
+	
+	50% {
+		transform: rotate(180deg);
+	}
+	
+	75% {
+		transform: rotate(360deg);
+	}
+	
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
+@keyframes cssload-loader-inner {
+	0% {
+		height: 0%;
+	}
+	
+	25% {
+		height: 0%;
+	}
+	
+	50% {
+		height: 100%;
+	}
+	
+	75% {
+		height: 100%;
+	}
+	
+	100% {
+		height: 0%;
+	}
+}
